RESOLVED FIXED268320
Crash under VideoPresentationManagerProxy::createLayerHostViewWithID()
https://bugs.webkit.org/show_bug.cgi?id=268320
Summary Crash under VideoPresentationManagerProxy::createLayerHostViewWithID()
Chris Dumez
Reported 2024-01-29 12:17:34 PST
Crash under VideoPresentationManagerProxy::createLayerHostViewWithID(): ``` 23 WTF::RefPtr<WebKit::ProcessLauncher, WTF::RawPtrTraits<WebKit::ProcessLauncher>, WTF::DefaultRefDerefTraits<WebKit::ProcessLauncher>>::operator bool() const 23 WebKit::AuxiliaryProcessProxy::processID() const ==> 23 WebKit::VideoPresentationManagerProxy::createLayerHostViewWithID(WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>, unsigned int, WebCore::FloatSize const&, float) <== 22 WebKit::VideoPresentationManagerProxy::createViewWithID(WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>, unsigned int, WebCore::FloatSize const&, WebCore::FloatSize const&, float) | 22 WebKit::RemoteLayerTreeHost::makeNode(WebKit::RemoteLayerTreeTransaction::LayerCreationProperties const&) | 22 WebKit::RemoteLayerTreeHost::createLayer(WebKit::RemoteLayerTreeTransaction::LayerCreationProperties const&) | 22 WebKit::RemoteLayerTreeHost::updateLayerTree(WebKit::RemoteLayerTreeTransaction const&, float) | 22 WebKit::RemoteLayerTreeDrawingAreaProxy::commitLayerTreeTransaction(IPC::Connection&, WebKit::RemoteLayerTreeTransaction const&, WebKit::RemoteScrollingCoordinatorTransaction const&)::$_8::operator()() const | 22 WebKit::RemoteLayerTreeDrawingAreaProxy::commitLayerTreeTransaction(IPC::Connection&, WebKit::RemoteLayerTreeTransaction const&, WebKit::RemoteScrollingCoordinatorTransaction const&) | 22 WebKit::RemoteLayerTreeDrawingAreaProxy::commitLayerTree(IPC::Connection&, WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&) | 22 auto void IPC::callMemberFunction<WebKit::RemoteLayerTreeDrawingAreaProxy, WebKit::RemoteLayerTreeDrawingAreaProxy, void (IPC::Connection&, WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&), std::__1::tuple<WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>>>(WebKit::RemoteLayerTreeDrawingAreaProxy*, void (WebKit::RemoteLayerTreeDrawingAreaProxy::*)(IPC::Connection&, WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&), IPC::Connection&, std::__1::tuple<WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>>&&)::'lambda'(auto&&...)::operator()<WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>>(auto&&...) const | 22 decltype(std::declval<WebKit::RemoteLayerTreeDrawingAreaProxy>()(std::declval<WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>>())) std::__1::__invoke[abi:sn170006]<void IPC::callMemberFunction<WebKit::RemoteLayerTreeDrawingAreaProxy, WebKit::RemoteLayerTreeDrawingAreaProxy, void (IPC::Connection&, WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&), std::__1::tuple<WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>>>(WebKit::RemoteLayerTreeDrawingAreaProxy*, void (WebKit::RemoteLayerTreeDrawingAreaProxy::*)(IPC::Connection&, WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&), IPC::Connection&, std::__1::tuple<WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>>&&)::'lambda'(auto&&...), WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>>(WebKit::RemoteLayerTreeDrawingAreaProxy&&, WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&) | 22 decltype(auto) std::__1::__apply_tuple_impl[abi:sn170006]<void IPC::callMemberFunction<WebKit::RemoteLayerTreeDrawingAreaProxy, WebKit::RemoteLayerTreeDrawingAreaProxy, void (IPC::Connection&, WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&), std::__1::tuple<WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>>>(WebKit::RemoteLayerTreeDrawingAreaProxy*, void (WebKit::RemoteLayerTreeDrawingAreaProxy::*)(IPC::Connection&, WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&), IPC::Connection&, std::__1::tuple<WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>>&&)::'lambda'(auto&&...), std::__1::tuple<WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>>, 0ul>(WebKit::RemoteLayerTreeDrawingAreaProxy&&, WebKit::RemoteLayerTreeDrawingAreaProxy&&, std::__1::__tuple_indices<0ul>) | 22 decltype(auto) std::__1::apply[abi:sn170006]<void IPC::callMemberFunction<WebKit::RemoteLayerTreeDrawingAreaProxy, WebKit::RemoteLayerTreeDrawingAreaProxy, void (IPC::Connection&, WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&), std::__1::tuple<WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>>>(WebKit::RemoteLayerTreeDrawingAreaProxy*, void (WebKit::RemoteLayerTreeDrawingAreaProxy::*)(IPC::Connection&, WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&), IPC::Connection&, std::__1::tuple<WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>>&&)::'lambda'(auto&&...), std::__1::tuple<WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>>>(WebKit::RemoteLayerTreeDrawingAreaProxy&&, WebKit::RemoteLayerTreeDrawingAreaProxy&&) | 22 void IPC::callMemberFunction<WebKit::RemoteLayerTreeDrawingAreaProxy, WebKit::RemoteLayerTreeDrawingAreaProxy, void (IPC::Connection&, WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&), std::__1::tuple<WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>>>(WebKit::RemoteLayerTreeDrawingAreaProxy*, void (WebKit::RemoteLayerTreeDrawingAreaProxy::*)(IPC::Connection&, WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&), IPC::Connection&, std::__1::tuple<WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>>&&) | 22 void IPC::handleMessage<Messages::RemoteLayerTreeDrawingAreaProxy::CommitLayerTree, WebKit::RemoteLayerTreeDrawingAreaProxy, WebKit::RemoteLayerTreeDrawingAreaProxy, void (IPC::Connection&, WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&)>(IPC::Connection&, IPC::Decoder&, WebKit::RemoteLayerTreeDrawingAreaProxy*, void (WebKit::RemoteLayerTreeDrawingAreaProxy::*)(IPC::Connection&, WTF::Vector<std::__1::pair<WebKit::RemoteLayerTreeTransaction, WebKit::RemoteScrollingCoordinatorTransaction>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&)) | 22 WebKit::RemoteLayerTreeDrawingAreaProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) | 22 IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) | 22 WebKit::AuxiliaryProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) ```
Attachments
Chris Dumez
Comment 1 2024-01-29 12:17:45 PST
Chris Dumez
Comment 2 2024-01-29 12:23:00 PST
EWS
Comment 3 2024-01-29 17:25:02 PST
Committed 273707@main (dc7a514214ae): <https://commits.webkit.org/273707@main> Reviewed commits have been landed. Closing PR #23449 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.